Fixed the issue of having a no circle when dragging pices by changing the dragdrop function and square.firstChild.classList.add("black"); square.firstChild.classList.add("white");

--- a/style.css
+++ b/style.css
@@ -31,8 +31,12 @@ path{
 .piece {
     position: relative;
     z-index: 9;
+    cursor: grab;
 }
 
+.piece:active {
+    cursor: grabbing;
+}
 
 .beige{
     background-color: rgb(110, 110, 98);
