--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 }
 
 .square{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 40px;
     width: 40px;
     position: relative;
@@ -32,6 +35,7 @@ path{
     position: relative;
     z-index: 9;
     cursor: grab;
+    
 }
 
 .piece:active {
